--- a/backend/auth/.env
+++ b/backend/auth/.env
@@ -1,6 +1,6 @@
 ENV_NAME=local
 SERVER_ADDRESS=:3000
-POSTGRES_CONNECTION_STRING=host=localhost port=5432 dbname=auth user=cleversonsoares sslmode=disable connect_timeout=10
+POSTGRES_CONNECTION_STRING=host=localhost port=6543 dbname=transaction user=hubla_user password=hubla_password sslmode=disable connect_timeout=10
 
 ORIGIN=http://localhost:3000
 
