--- a/backend/transaction/Dockerfile
+++ b/backend/transaction/Dockerfile
@@ -7,8 +7,10 @@ RUN go mod download
 
 COPY . .
 
+RUN go generate ./...
+
 RUN go build -o .bin/transaction-service ./transaction/main.go
 
 EXPOSE 3000
 
-CMD [".bin/transaction-service"]
+CMD [".bin/transaction-service", "0.0.0.0"]
