--- a/backend/transaction/.env
+++ b/backend/transaction/.env
@@ -1,3 +1,3 @@
 ENV_NAME=local
 SERVER_ADDRESS=:3000
-POSTGRES_CONNECTION_STRING=host=localhost port=5432 dbname=transactions user=cleversonsoares sslmode=disable connect_timeout=10
+POSTGRES_CONNECTION_STRING=host=postgres port=5432 dbname=transaction user=hubla_user password=hubla_password sslmode=disable
