--- a/horizon-ui-chakra/package.json
+++ b/horizon-ui-chakra/package.json
@@ -21,6 +21,7 @@
     "babel-preset-react": "^6.24.1",
     "babel-register": "^6.26.0",
     "framer-motion": "^4.1.17",
+    "prop-types": "^15.8.1",
     "react": "17.0.2",
     "react-apexcharts": "^1.4.0",
     "react-calendar": "^3.7.0",
@@ -43,7 +44,8 @@
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "sitemap": "babel-node ./sitemap-builder.js"
+    "sitemap": "babel-node ./sitemap-builder.js",
+    "lint": "eslint src --ext .js,.jsx"
   },
   "resolutions": {
     "react-error-overlay": "6.0.9"
@@ -67,6 +69,9 @@
     ]
   },
   "devDependencies": {
+    "eslint": "^8.38.0",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-unused-imports": "^2.0.0",
     "gh-pages": "^3.2.3"
   }
 }
